--- a/assets/stylesheets/source/base/_scaffolding.scss
+++ b/assets/stylesheets/source/base/_scaffolding.scss
@@ -16,7 +16,7 @@
 
 // Body reset
 html {
-  font-size: 62.5%; // Effectively sets the font size to base 10
+  font-size: $font-size-root;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
@@ -24,7 +24,6 @@ body {
   background-color: $body-bg;
   color: $text-color;
   font-family: $font-family-base;
-  font-size: $font-size-base;
   line-height: $line-height-base;
   -webkit-font-smoothing: antialiased;
 }
