--- a/assets/stylesheets/source/global/variables/_grid.scss
+++ b/assets/stylesheets/source/global/variables/_grid.scss
@@ -9,16 +9,16 @@
 // Variables for Bourbon Neat grids
 // @source: http://neat.bourbon.io/docs/#variables
 
-$border-box-sizing:     true !default;
-$column:                golden-ratio(1em, 3) !default;
-$default-feature:       min-width !default;
-$grid-columns:          12 !default;
-$gutter:                golden-ratio(1em, 1) !default;
-$max-width:             em(1088) !default;
+$border-box-sizing:     true;
+$column:                golden-ratio(1%, 3);
+$default-feature:       min-width;
+$grid-columns:          12;
+$gutter:                golden-ratio(1%, 1);
+$max-width:             font-size(1088);
 
 // Visual grid
 // Set $visual-grid to true to make sure your site is lining up as expected
-$visual-grid:           false !default;
-$visual-grid-color:     #eee !default;
-$visual-grid-index:     back !default;
-$visual-grid-opacity:   0.4 !default;
+$visual-grid:           false;
+$visual-grid-color:     #eee;
+$visual-grid-index:     back;
+$visual-grid-opacity:   0.4;
