--- a/assets/stylesheets/source/global/variables/_ratios.scss
+++ b/assets/stylesheets/source/global/variables/_ratios.scss
@@ -1,4 +1,11 @@
-// Ratios
+
+// Title:      Ratio variables
+// Version:    0.0.1
+// Author:     Andy Smith
+// Source:     http://github/com/andyra/proto
+
+// Used primarily for sizing text and line spacing in a structured way.
+// @source: http://alistapart.com/article/more-meaningful-typography
 // @source: http://modularscale.com/
 
 $minor-second:              1.067;  // 15:16
