--- a/assets/stylesheets/source/global/variables/_colors.scss
+++ b/assets/stylesheets/source/global/variables/_colors.scss
@@ -1,10 +1,8 @@
 
-// Title:         Color variables
-// Author:        Andy Smith
-// Source:        http://github/com/andyra/proto
-// License:       MIT License
-// Last Edited:   26 Feb 2014
-// Version:       0.1
+// Title:      Colors
+// Version:    0.0.1
+// Author:     Andy Smith
+// Source:     http://github/com/andyra/proto
 
 // Color variables declared in hsl() to allow for easy adjusting w/o an image
 // editor. SASS will convert these values to HEX in the compiled CSS.
