--- a/assets/stylesheets/source/global/variables/_components.scss
+++ b/assets/stylesheets/source/global/variables/_components.scss
@@ -1,25 +1,30 @@
 
-// Title:         Component variables
-// Author:        Andy Smith
-// Source:        http://github/com/andyra/proto
-// License:       MIT License
-// Last Edited:   26 Feb 2014
-// Version:       0.1
+// Title:      Component variables
+// Version:    0.0.1
+// Author:     Andy Smith
+// Source:     http://github/com/andyra/proto
 
-// Generic style values that can be reused across components
+// Generic style values that can be reused across your entire project. If a
+// variable applies only to a specific component, it should be placed at the top
+// of the component's .scss file.
+
+// @todo: these should be in REMs if possible, or PX
 
 // Border radius
 $border-radius-base:         4px !default;
-$border-radius-large:        6px !default;
-$border-radius-small:        3px !default;
+$border-radius-lg:           6px !default;
+$border-radius-sm:           3px !default;
 
 // Padding
 $padding-base-vertical:      6px !default;
 $padding-base-horizontal:   12px !default;
-$padding-large-vertical:    10px !default;
-$padding-large-horizontal:  16px !default;
-$padding-small-vertical:     5px !default;
-$padding-small-horizontal:  10px !default;
+
+$padding-lg-vertical:       10px !default;
+$padding-lg-horizontal:     16px !default;
+
+$padding-sm-vertical:        5px !default;
+$padding-sm-horizontal:     10px !default;
+
 $padding-xs-vertical:        1px !default;
 $padding-xs-horizontal:      5px !default;
 
