--- a/assets/stylesheets/source/global/variables/_grid.scss
+++ b/assets/stylesheets/source/global/variables/_grid.scss
@@ -1,24 +1,28 @@
 
-// Title:         Grid variables
-// Author:        Andy Smith
-// Source:        http://github/com/andyra/proto
-// License:       MIT License
-// Last Edited:   26 Feb 2014
-// Version:       0.1
+// Title:      Grid settings
+// Version:    0.0.1
+// Author:     Andy Smith
+// Source:     http://github/com/andyra/proto
 
 // Variables for Bourbon Neat grids
 // @source: http://neat.bourbon.io/docs/#variables
 
-$border-box-sizing:     true;
-$column:                golden-ratio(1%, 3);
-$default-feature:       min-width;
-$grid-columns:          12;
-$gutter:                golden-ratio(1%, 1);
-$max-width:             font-size(1088);
+// The size of the outer container
+$max-width:                  font-size(1088);
 
-// Visual grid
-// Set $visual-grid to true to make sure your site is lining up as expected
-$visual-grid:           false;
-$visual-grid-color:     #eee;
-$visual-grid-index:     back;
-$visual-grid-opacity:   0.4;
+// Column count
+$grid-columns:               12;
+
+// Column and gutter sizing
+// The units here (px, em, rem, %) should be the same
+$column:                     golden-ratio(1%, 3);
+$gutter:                     golden-ratio(1%, 1);
+
+// Sets the box-sizing property of all elements to `border-box`. This should
+// probably always be set to true
+// @source: http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+$border-box-sizing:          true;
+
+// Sets the default media feature that media() and new-breakpoint() revert to
+// when only a breakpoint value is passed.
+$default-feature:            min-width;
