--- a/assets/stylesheets/source/base/_normalize.scss
+++ b/assets/stylesheets/source/base/_normalize.scss
@@ -1,11 +1,9 @@
 
-// Title:         Normalize
-// Author:        Nicholas Gallagher & Jonathan Neal
-// Source:        git.io/normalize
-// License:       MIT License
-// Last Edited:   26 Feb 2014
-// Version:       2.1.3
-
+// Title:      Normalize.css
+// Version:    2.1.3
+// Author:     Nicholas Gallagher & Jonathan Neal
+// Source:     git.io/normalize
+// License:    MIT License
 
 // Table of contents
 // ----------------------------------------------------------------------------
