--- a/assets/stylesheets/source/styles.scss
+++ b/assets/stylesheets/source/styles.scss
@@ -7,12 +7,10 @@
 //  888          888     888   888   888 . 888   888
 // o888o        d888b    `Y8bod8P'   "888" `Y8bod8P'
 
-// Title:         Styles
-// Author:        Andy Smith
-// Source:        http://github/com/andyra/proto
-// License:       MIT License
-// Last Edited:   26 Feb 2014
-// Version:       0.1
+// Title:      Proto styles
+// Version:    0.0.1
+// Author:     Andy Smith
+// Source:     http://github/com/andyra/proto
 
 // This file is only used to import other stylesheets. To add new styles, create
 // a new `.scss` file and import it below. All imported files should begin with
@@ -21,12 +19,12 @@
 // Imports
 // ----------------------------------------------------------------------------
 
-// @temp styles for testing
-
 @import "global/global";
 @import "base/base";
 @import "components/components";
 
+
+// @temp styles for testing
 body {
   @include outer-container;
 }
