--- a/assets/stylesheets/source/base/_scaffolding.scss
+++ b/assets/stylesheets/source/base/_scaffolding.scss
@@ -1,11 +1,10 @@
 
-// Title:         Scaffolding
-// Author:        Andy Smith
-// Source:        http://github/com/andyra/proto
-// License:       MIT License
-// Last Edited:   26 Feb 2014
-// Version:       0.1
+// Title:      Scaffolding
+// Version:    0.0.1
+// Author:     Andy Smith
+// Source:     http://github/com/andyra/proto
 
+// Scaffolding if the base HTML structure that all web pages will have.
 
 // Reset the box-sizing
 *,
