--- a/assets/stylesheets/source/global/_ratios.scss
+++ b/assets/stylesheets/source/global/_ratios.scss
@@ -4,7 +4,7 @@
 // Author:     Andy Smith
 // Source:     http://github/com/andyra/proto
 
-// Used primarily for sizing text and line spacing in a structured way.
+// Used primarily for structured sizing of text and line spacing.
 // @source: http://alistapart.com/article/more-meaningful-typography
 // @source: http://modularscale.com/
 
