--- a/assets/stylesheets/source/global/functions/functions.scss
+++ b/assets/stylesheets/source/global/functions/functions.scss
@@ -13,5 +13,6 @@
 // Imports
 // ----------------------------------------------------------------------------
 
-@import "font-size";
+@import "type-scale";
 @import "strip-unit";
+@import "unit";
