--- a/assets/stylesheets/source/global/functions/_type-scale.scss
+++ b/assets/stylesheets/source/global/functions/_type-scale.scss
@@ -1,6 +1,10 @@
 
 // Increment font sizes up and down the modular scale based on $font-size-base
-// and $type-scale
+// and $type-ratio
 @function type-scale($increment) {
-  @return modular-scale($font-size-base, $increment, $type-scale);
+  @if $type-unit == "px" {
+    @return unquote(u(round(modular-scale($font-size-base, $increment, $type-ratio))));
+  } @else {
+    @return unquote(u(modular-scale($font-size-base, $increment, $type-ratio)));
+  }
 }
